compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__let_assert_binding_cannot_be_used_in_panic_message.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 2866
expression: "\npub fn main() {\n  let assert Ok(message) = Error(\"Not Message\") as { \"Uh oh: \" <> message }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  let assert Ok(message) = Error("Not Message") as { "Uh oh: " <> message }
}


----- ERROR
error: Unknown variable
  ┌─ /src/one/two.gleam:3:67
  │
3 │   let assert Ok(message) = Error("Not Message") as { "Uh oh: " <> message }
  │                                                                   ^^^^^^^

The name `message` is not in scope here.
